# kde-thumbnailer-ooxml

./: .gitmodules  CMakeLists.txt  ooxmlcreator.cpp
